attempt to fix word-break for ie10 mobile, and overflow-x as fallback

--- a/css/styles.css
+++ b/css/styles.css
@@ -276,6 +276,7 @@ hr{
         text-decoration: none;
         transition: all ease .3s;
         word-break: break-all;
+        -ms-word-break: break-all;
     }
 
     .back a:hover{
